# yomo-flow-ssvm-example

./: .gitignore  README.md  go.mod  go.sum  main.go  ssvm_main.go  ssvm_wrapper.go  workflow.yaml
triple/: Cargo.toml
triple/src/: lib.rs  main.rs  tensorflow.rs
