[package]
name = "triple"
version = "0.1.0"
authors = ["C.C. <fanweixiao@gmail.com>"]
edition = "2018"

[lib]
name = "triple_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.44"
ssvm-wasi-helper = "=0.1.0"
